Fixed scrollbar for contents.

--- a/timApp/static/stylesheet.css
+++ b/timApp/static/stylesheet.css
@@ -1292,6 +1292,8 @@ img.console {
     top: 0;
     left: 0;
     z-index: 1;
+    bottom: 0;
+    overflow-y: auto;
 }
 
 .sidebar {
